--- a/index.html
+++ b/index.html
@@ -1,1 +1,96 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Splitr - Simplify Group Bill Splitting</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            color: white;
+            text-align: center;
+            overflow: hidden;
+        }
+
+        .background {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('friendsAdenture.jpg') no-repeat center center/cover;
+            filter: brightness(0.7);
+            z-index: -1;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            padding: 20px;
+            backdrop-filter: blur(5px);
+            background-color: rgba(0, 0, 0, 0.4);
+        }
+
+        h1 {
+            font-size: 3em;
+            margin: 0;
+            color: #FFD700; /* Gold color for emphasis */
+        }
+
+        p {
+            font-size: 1.2em;
+            margin: 15px 0;
+            max-width: 600px;
+        }
+
+        .cta-button {
+            background-color: #FF6347;
+            color: white;
+            border: none;
+            padding: 15px 30px;
+            font-size: 1em;
+            cursor: pointer;
+            border-radius: 25px;
+            margin-top: 20px;
+            text-decoration: none;
+            transition: background 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #FF4500;
+        }
+
+        .footer {
+            position: fixed;
+            bottom: 20px;
+            width: 100%;
+            text-align: center;
+            color: #cccccc;
+            font-size: 0.9em;
+        }
+
+        a {
+            color: #FFD700;
+            text-decoration: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="background"></div>
+    <div class="content">
+        <h1>Splitr</h1>
+        <p>The ultimate app for group outings! Just upload your receipt, and Splitr will automatically itemize everything, making it easy to split the bill down to individual items. Perfect for nights out with friends, lunches with colleagues, and any other group activities. No more awkward math—Splitr does it for you!</p>
+        <p>Be the first to simplify group bills—Join the Splitr beta and help us perfect effortless bill splitting!</p>
+        <a href="https://testflight.apple.com/join/X8EPt7CK" class="cta-button">Join the Splitr Beta</a>
+        <p>Check us out on <a href="https://www.producthunt.com">Product Hunt</a> and share your feedback!</p>
+    </div>
+    <div class="footer">
+        Created by Raoul Nanwani
+    </div>
+</body>
+</html>
